# LabEquipment

./: LICENSE  README.md  pyproject.toml
examples/: AQ4321A_Test.py  DS1104_Test.py  E5052A_Test.py  R3465_Test.py  SG384_Test.py
examples/in_progress/: E5052A_Test.py  SG384_Test.py
instruments/awg/signal_generator/: SG384.py
instruments/esa/: E4440A.py  R3465.py
instruments/oscilloscopes/: HP54810A.py
instruments/ssa/: E5052A.py  N9010A.py
src/labequipment/in_progress/: AQ3675_Test.py  DS1104_Test.py  N9010A_Test.py  R3465_Test.py  TDS7404_Test.py
src/labequipment/instruments/lasers/: AQ4321A.py  TLB6700.py
src/labequipment/instruments/osa/: AQ3675.py
src/labequipment/instruments/oscilloscopes/: DS1104.py  TDS7404.py
